--- a/nbs/tools.ipynb
+++ b/nbs/tools.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b020818-cf5d-4b06-aa00-31a969ac433f",
+   "id": "5cdd5869-c97a-48a4-9a05-14139e8dd04b",
    "metadata": {},
    "source": [
-    "# Variational AutoEncoders"
+    "# Tools\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2a1a83b-e171-4d80-a931-a35b871d4e94",
+   "metadata": {},
+   "source": [
+    "## Pytorch-lightning\n",
+    "To remove boiler plate code without losing the flexibility of Pytorch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1623bb5c-05a7-404a-88fe-bd05d7acb51d",
+   "id": "e3b03ad4-febd-4053-9264-3e97190b7a27",
    "metadata": {},
    "outputs": [],
    "source": []
